<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EllipseWriteStep" Id="{0ccae278-2ded-4952-94bd-2af252d056f8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EllipseWriteStep :
(
	Check,
	FirstPotisionMove,
	WriteEllipse,
	ZAxixUpPotision
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>